--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@ padding:5px
         <li> <a href="index.html">About us</a></li>
         <li> <a href="index.html">Contact us</a></li>
     </ul>
-</nav>
-            
-
+</nav> 
     </header>
-    
+    <h1>Banner</h1>
+    <section>
+        <div-card>
+            <img src="mob 1.jfif">
+            <img src="mob 2.jfif">
+            <img src="mob 3.jfif">
+        </div-card>
+    </section>
 </body>
 </html>
